[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools', 'setuptools_scm[toml]']

[tool.setuptools_scm]

[tool.setuptools.package-data]
jewcal = [
  'py.typed',
]

[project]
authors = [{name = 'essel-dev'}]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Utilities',
  'Typing :: Typed',
]
dependencies = []
description = 'Convert Gregorian to Jewish dates with holidays and zmanim (Diaspora/Israel).'
dynamic = ['version']
keywords = [
  'jewish calendar',
  'hebrew calendar',
]
license = {file = 'LICENSE'}
name = 'jewcal'
readme = 'README.rst'
requires-python = '>=3.10'

[project.urls]
'Bug Tracker' = 'https://github.com/essel-dev/jewcal/issues'
'Changelog' = 'https://github.com/essel-dev/jewcal/releases'
'Documentation' = 'https://jewcal.readthedocs.io/'
'GitHub' = 'https://github.com/essel-dev/jewcal'

[project.scripts]
jewcal = 'jewcal.__main__:main'

[project.optional-dependencies]
dev = [
  'pre-commit',
  'tox',
  'sphinx',
  'sphinx-rtd-theme',
]

[tool.tox]
legacy_tox_ini = """
	[tox]
	envlist =
		py{310,311,312}
        ruff-format
		ruff-lint
		pylint
		mypy
		darglint
		pre-commit
		docs
		jewcal

	[testenv]
	package = wheel
	wheel_build_env = .pkg
	deps =
		coverage
		py310: coverage[toml]
	commands =
		coverage run -m unittest discover
		py312: coverage report -m

	[testenv:pylint]
	deps = pylint
	commands = pylint src tests docs

	[testenv:ruff-lint]
	deps = ruff
	commands = ruff check --fix

	[testenv:ruff-format]
	deps = ruff
	commands = ruff format

	[testenv:mypy]
	deps = mypy
	commands = mypy

	[testenv:darglint]
	deps = darglint
	commands = darglint -s google src docs

	[testenv:pre-commit]
	deps = pre-commit
	commands = pre-commit run --all-files

	[testenv:docs]
	changedir=docs/source
	deps =
		sphinx
		sphinx-rtd-theme
	allowlist_externals = make
	commands = sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html

	[testenv:jewcal]
	allowlist_externals = jewcal
	commands = jewcal

	[gh-actions]
	python =
		3.10: py310
		3.11: py311
		3.12: py312, isort, ruff-format, ruff-lint, pylint, mypy, darglint, jewcal
"""

[tool.coverage.run]
source = [
  'src',
]

[tool.ruff.lint]
ignore = [
  'ANN101', # flake8-annotations : missing-type-self: deprecated
  'PT009', # Use a regular `assert` instead of unittest-style `assertEqual`
]
select = [
  'ALL',
]

[tool.ruff.lint.per-file-ignores]
'docs/source/conf.py' = ['INP001'] # __init__.py missing
'src/jewcal/__main__.py' = ['T201', 'T203'] # print, pprint
'src/jewcal/core.py' = ['SLF001'] # Private member accessed

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.format]
docstring-code-format = true
quote-style = 'single'

[tool.mypy]
enable_error_code = ['ignore-without-code', 'redundant-expr', 'truthy-bool']
explicit_package_bases = true
files = 'src, tests, docs'
namespace_packages = true
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = 'jewcal.*'
